# crypto-service

./: .gitignore  Cargo.toml  Package.swift  README.md  build.rs  rust-toolchain.toml  uniffi-bindgen.rs  uniffi.toml
.build/: workspace-state.json
.build/x86_64-apple-macosx/debug/CryptoService.build/: module.modulemap
.build/x86_64-apple-macosx/debug/CryptoServiceUniFFI.build/: module.modulemap
.build/x86_64-apple-macosx/debug/ModuleCache/1DCM0H0U7ZK4/: Dispatch-Y4ZZ1HR72FEI.pcm  (+19 more)
.github/workflows/: release.yml  rust.yml  test.yml
apple/Sources/Colossus/: Colossus.swift
apple/Sources/CryptoService/: CryptoService.swift  Exports.swift
apple/Sources/UniFFI/: crypto_service.swift
bindings/: crypto_service.swift  crypto_serviceFFI.h  crypto_serviceFFI.modulemap
crates/crypto-service-server/: Cargo.toml
crates/crypto-service-server/src/: lib.rs  main.rs  state.rs
crates/crypto-service-server/src/alphavantage_api/: alpha_client.rs  alpha_handler.rs  mod.rs
crates/crypto-service-server/src/api_client/: get.rs  mod.rs  post.rs
crates/crypto-service-server/src/binance/: binance_client.rs  mod.rs  orderbook_handler.rs
crates/crypto-service-server/src/coin_api/: assets_handler.rs  coinapi_client.rs  mod.rs
crates/crypto-service-server/src/coin_watch/: coin_watch_client.rs  coin_watch_handlers.rs  mod.rs
crates/crypto-service-uniffi/: Cargo.toml  build.rs  uniffi.toml
crates/crypto-service-uniffi/src/: client_trait.rs  crypto_service.udl  crypto_service.uniffi.rs  lib.rs
crates/crypto-service-uniffi/src/alphavantage_service/: models.rs
crates/crypto-service-uniffi/src/api_client/: api_client.rs  error.rs  gateway.rs  mod.rs  network_antenna.rs
crates/crypto-service-uniffi/src/binance_service/: models.rs
crates/crypto-service-uniffi/src/coin_watch_service/: coin_watch_client.rs  mod.rs  models.rs
crates/crypto-service-uniffi/src/coinapi_service/: models.rs
crates/crypto-service-uniffi/src/network_antenna/: mod.rs  network_antenna.rs
scripts/: build_ios.sh  release.sh
src/: crypto_service.swift  crypto_service.udl  crypto_serviceFFI.h  lib.rs  main.rs  mod.rs  state.rs
src/api_client/: api_client.rs  client_trait.rs  get.rs  mod.rs  post.rs
src/binance_service/: binance_client.rs  helpers.rs  mod.rs  orderbook_handler.rs  query_trait.rs
src/coin_watch_service/: coin_watch_client.rs  coin_watch_handlers.rs  mod.rs  models.rs
src/coinapi_service/: assets_handler.rs  coinapi_client.rs  helpers.rs  mod.rs
tests/: main.rs
tests/bindings/: tests.swift
(+1 files in other folders)
