[workspace]
resolver = "2"
members = [
    "crates/crypto-service-server",
    "crates/crypto-service-uniffi",
]

# Shared dependencies that all of the crates need
[workspace.dependencies]
clippy = "0.0.302"
anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["macros"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"

[profile.release]
incremental = false
panic = 'unwind'
codegen-units = 1